Bug 385417 - Queries do not work as lookup fields for tables
Summary: Queries do not work as lookup fields for tables
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 3.1.0 Alpha
Platform: Other Linux
: HI normal
Target Milestone: 3.1
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-05 20:13 UTC by Jarosław Staniek
Modified: 2017-10-05 20:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2017-10-05 20:13:06 UTC
Table designer allows to specify tables or queries for data of lookup fields.
But queries do not work.

1. Create a table design in Table Designer with a number of columns, let one them, called F, have integer type
2. Add one or more records to the table
3. Switch back to the Designer
4. Assign a working query (non-empty) to the lookup field of F
5. Save the design and switch to data view

Actual result: no records are displayed at all even when the table had records in added in step 2.

Expected: Combo boxes work in the field F with lookups defined, any data change in field F is saved properly and restored in next session.
Comment 1 Jarosław Staniek 2017-10-05 20:17:23 UTC
Git commit a10c1be7b9dd888b8ae08822ede8d178eacf1dc6 by Jaroslaw Staniek.
Committed on 05/10/2017 at 20:16.
Pushed by staniek into branch 'master'.

Fix generating of SQL statements if there are tables used having lookup fields based on queries

This fixes support for lookup fields based on queries in Kexi tables.
FIXED-IN:3.1.0

M  +9    -6    src/KDbNativeStatementBuilder.cpp

https://commits.kde.org/kdb/a10c1be7b9dd888b8ae08822ede8d178eacf1dc6