Fix generating of SQL statements if there are tables used having lookup fields based on queries

This fixes support for lookup fields based on queries in Kexi tables.

BUG:385417
FIXED-IN:3.1.0